@@ -5,7 +5,8 @@ Change log
 1.0.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- When two users are exporting at the same time this could end in
+  broken export files.
 
 
 1.0.0 (2009-12-29)
